--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.4.4",
     "react-scripts": "5.0.1",
+    "react-spring": "^9.5.5",
+    "react-typewriter-effect": "^1.1.0",
+    "typewriter-effect": "^2.19.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
