--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "daisyui": "^2.42.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.0",
     "react-icons": "^4.7.1",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.4.4",
