--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "aos": "^3.0.0-beta.6",
     "daisyui": "^2.42.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.7.1",
+    "react-push-notification": "^1.3.0",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.4.4",
     "react-scripts": "5.0.1",
