--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^6.4.4",
     "react-scripts": "5.0.1",
     "react-spring": "^9.5.5",
+    "react-type-animation": "^3.1.0",
     "react-typewriter-effect": "^1.1.0",
     "typewriter-effect": "^2.19.0",
     "web-vitals": "^2.1.4"
